--- a/stocks/index.html
+++ b/stocks/index.html
@@ -85,7 +85,7 @@
         </select>
         <button class="btn" type="submit">Get Crypto</button>
       </form>
-      <div class="hint">实时汇率来自 Alpha Vantage；图表基于所选交易所（Coinbase=USD、Binance=USDT）。</div>
+      <div class="hint">Rate from: Alpha Vantage；Graph from:（Coinbase=USD、Binance=USDT）。</div>
 
       <div id="crypto-result" class="card"></div>
     </section>
