--- a/stocks/index.html
+++ b/stocks/index.html
@@ -74,10 +74,10 @@
       <form id="crypto-form" class="form-row">
         <input type="text" id="cryptoSymbol" required placeholder="币种（如：BTC、ETH）" />
         <select id="cryptoMarket">
-          <option value="USD" selected>USD（美元）</option>
-          <option value="USDT">USDT（泰达）</option>
-          <option value="EUR">EUR（欧元）</option>
-          <option value="JPY">JPY（日元）</option>
+          <option value="USD" selected>USD</option>
+          <option value="USDT">USDT</option>
+          <option value="EUR">EUR</option>
+          <option value="JPY">JPY</option>
         </select>
         <select id="cryptoExchange">
           <option value="COINBASE" selected>Coinbase（USD）</option>
@@ -85,7 +85,7 @@
         </select>
         <button class="btn" type="submit">Get Crypto</button>
       </form>
-      <div class="hint">Rate from: Alpha Vantage；Graph from:（Coinbase=USD、Binance=USDT）。</div>
+      <div class="hint">Rate from: Alpha Vantage; Graph from:（Coinbase=USD、Binance=USDT）</div>
 
       <div id="crypto-result" class="card"></div>
     </section>
