--- a/stocks/index.html
+++ b/stocks/index.html
@@ -104,7 +104,7 @@
   <script src="https://s3.tradingview.com/tv.js"></script>
   <script>
     /* ========= Config ========= */
-    const AV_API_KEY   = 'MXW8J9FLMSVW8FAW';    // Alpha Vantage
+    const AV_API_KEY   = 'ZF69D9QK42EURZBH';    // Alpha Vantage
     const PROXY_URL    = "/api/chat";           // Your OpenAI proxy endpoint
     const OPENAI_MODEL = "gpt-4o-mini";
 
